--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "babel-loader": "8.2.2",
     "core-js": "3.9.1",
     "critical": "3.0.0",
-    "css-loader": "5.1.2",
-    "css-minimizer-webpack-plugin": "^1.2.0",
+    "css-loader": "5.1.3",
+    "css-minimizer-webpack-plugin": "1.3.0",
     "cssnano": "4.1.10",
     "del": "6.0.0",
     "delegated-events": "1.1.2",
@@ -50,11 +50,11 @@
     "text-encoding": "0.7.0",
     "turbolinks": "^5.2.0",
     "url-loader": "4.1.1",
-    "webpack": "5.25.1",
+    "webpack": "5.26.3",
     "webpack-assets-manifest": "5.0.1",
     "webpack-cli": "4.5.0",
-    "workbox-webpack-plugin": "6.1.1",
-    "workbox-window": "6.1.1"
+    "workbox-webpack-plugin": "6.1.2",
+    "workbox-window": "6.1.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
