--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp": "4.0.2",
     "lodash": "4.17.21",
     "lost": "8.3.1",
+    "memoizee": "^0.4.15",
     "mini-css-extract-plugin": "1.4.0",
     "normalize.css": "8.0.1",
     "plyr": "3.6.4",
