--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
     "gulp": "4.0.2",
     "lodash": "4.17.21",
     "lost": "8.3.1",
+    "lunr": "^2.3.9",
+    "lunr-languages": "^1.4.0",
+    "mark.js": "^8.11.1",
     "memoizee": "^0.4.15",
     "mini-css-extract-plugin": "1.4.0",
     "normalize.css": "8.0.1",
     "plyr": "3.6.4",
-    "postcss": "8.2.8",
+    "postcss": "8.2.9",
     "postcss-browser-reporter": "0.6.0",
-    "postcss-import": "14.0.0",
+    "postcss-import": "14.0.1",
     "postcss-loader": "5.2.0",
     "postcss-preset-env": "6.7.0",
     "postcss-reporter": "7.0.2",
@@ -49,8 +52,8 @@
     "terser-webpack-plugin": "5.1.1",
     "turbolinks": "^5.2.0",
     "url-loader": "4.1.1",
-    "webpack": "5.28.0",
-    "webpack-assets-manifest": "5.0.1",
+    "webpack": "5.30.0",
+    "webpack-assets-manifest": "5.0.2",
     "webpack-cli": "4.6.0",
     "workbox-webpack-plugin": "6.1.2",
     "workbox-window": "6.1.2"
