--- a/package.json
+++ b/package.json
@@ -65,7 +65,6 @@
     "gray-matter": "^4.0.2",
     "html-to-text": "7.0.0",
     "marked": "2.0.1",
-    "minimist": "^1.2.5",
-    "node-id3": "0.2.2"
+    "minimist": "^1.2.5"
   }
 }
