--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-env": "7.13.12",
     "@babel/runtime": "7.13.10",
     "@babel/runtime-corejs3": "7.13.10",
+    "@hotwired/turbo": "^7.0.0-beta.5",
     "babel-loader": "8.2.2",
     "core-js": "3.10.1",
     "critical": "3.0.0",
