--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "eslint": "eslint --ext .jsx,.js webpack/"
   },
   "dependencies": {
-    "@babel/core": "7.13.15",
+    "@babel/core": "7.13.16",
     "@babel/plugin-transform-runtime": "7.13.15",
     "@babel/preset-env": "7.13.15",
-    "@babel/runtime": "7.13.10",
-    "@babel/runtime-corejs3": "7.13.10",
+    "@babel/runtime": "7.13.17",
+    "@babel/runtime-corejs3": "7.13.17",
     "@hotwired/turbo": "^7.0.0-beta.5",
     "babel-loader": "8.2.2",
-    "core-js": "3.10.1",
+    "core-js": "3.11.0",
     "critical": "3.0.1",
-    "css-loader": "5.2.2",
+    "css-loader": "5.2.4",
     "css-minimizer-webpack-plugin": "2.0.0",
     "del": "6.0.0",
     "delegated-events": "1.1.2",
@@ -40,32 +40,32 @@
     "memoizee": "^0.4.15",
     "mini-css-extract-plugin": "1.5.0",
     "normalize.css": "8.0.1",
-    "plyr": "3.6.6",
-    "postcss": "8.2.10",
+    "plyr": "3.6.7",
+    "postcss": "8.2.13",
     "postcss-browser-reporter": "0.6.0",
     "postcss-import": "14.0.1",
     "postcss-loader": "5.2.0",
     "postcss-preset-env": "6.7.0",
     "postcss-reporter": "7.0.2",
     "rucksack-css": "^1.0.2",
-    "sass": "1.32.8",
+    "sass": "1.32.11",
     "sass-loader": "11.0.1",
     "stimulus": "^2.0.0",
     "style-loader": "2.0.0",
     "terser-webpack-plugin": "5.1.1",
     "url-loader": "4.1.1",
-    "webpack": "5.33.2",
-    "webpack-assets-manifest": "5.0.5",
+    "webpack": "5.35.1",
+    "webpack-assets-manifest": "5.0.6",
     "webpack-cli": "4.6.0",
     "workbox-webpack-plugin": "6.1.5",
     "workbox-window": "6.1.5"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "7.24.0",
+    "eslint": "7.25.0",
     "eslint-plugin-import": "^2.22.1",
-    "gray-matter": "^4.0.2",
-    "html-to-text": "7.0.0",
+    "gray-matter": "4.0.3",
+    "html-to-text": "7.1.1",
     "marked": "2.0.3",
     "minimist": "^1.2.5"
   }
