--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "eslint": "eslint --ext .jsx,.js webpack/"
   },
   "dependencies": {
-    "@babel/core": "7.14.0",
-    "@babel/plugin-transform-runtime": "7.13.15",
-    "@babel/preset-env": "7.14.1",
+    "@babel/core": "7.14.2",
+    "@babel/plugin-transform-runtime": "7.14.2",
+    "@babel/preset-env": "7.14.2",
     "@babel/runtime": "7.14.0",
     "@babel/runtime-corejs3": "7.14.0",
     "@hotwired/turbo": "^7.0.0-beta.5",
@@ -24,7 +24,7 @@
     "core-js": "3.12.1",
     "critical": "3.0.1",
     "css-loader": "5.2.4",
-    "css-minimizer-webpack-plugin": "2.0.0",
+    "css-minimizer-webpack-plugin": "3.0.0",
     "del": "6.0.0",
     "delegated-events": "1.1.2",
     "file-loader": "6.2.0",
@@ -40,19 +40,19 @@
     "memoizee": "^0.4.15",
     "mini-css-extract-plugin": "1.6.0",
     "normalize.css": "8.0.1",
-    "plyr": "3.6.7",
+    "plyr": "3.6.8",
     "postcss": "8.2.15",
     "postcss-browser-reporter": "0.6.0",
     "postcss-import": "14.0.2",
-    "postcss-loader": "5.2.0",
+    "postcss-loader": "5.3.0",
     "postcss-preset-env": "6.7.0",
     "postcss-reporter": "7.0.2",
     "rucksack-css": "^1.0.2",
-    "sass": "1.32.12",
-    "sass-loader": "11.1.0",
+    "sass": "1.32.13",
+    "sass-loader": "11.1.1",
     "stimulus": "^2.0.0",
     "style-loader": "2.0.0",
-    "terser-webpack-plugin": "5.1.1",
+    "terser-webpack-plugin": "5.1.2",
     "url-loader": "4.1.1",
     "webpack": "5.37.0",
     "webpack-assets-manifest": "5.0.6",
@@ -63,7 +63,7 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "7.26.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "2.23.2",
     "gray-matter": "4.0.3",
     "html-to-text": "7.1.1",
     "marked": "2.0.3",
