--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@babel/preset-env": "7.14.4",
     "@babel/runtime": "7.14.0",
     "@babel/runtime-corejs3": "7.14.0",
-    "@hotwired/turbo": "^7.0.0-beta.5",
+    "@hotwired/turbo": "7.0.0-beta.6",
     "babel-loader": "8.2.2",
     "core-js": "3.14.0",
-    "critical": "3.1.0",
+    "critical": "4.0.0",
     "css-loader": "5.2.6",
     "css-minimizer-webpack-plugin": "3.0.1",
     "del": "6.0.0",
@@ -41,22 +41,22 @@
     "mini-css-extract-plugin": "1.6.0",
     "normalize.css": "8.0.1",
     "plyr": "3.6.8",
-    "postcss": "8.3.0",
+    "postcss": "8.3.2",
     "postcss-browser-reporter": "0.6.0",
     "postcss-import": "14.0.2",
-    "postcss-loader": "5.3.0",
+    "postcss-loader": "6.1.0",
     "postcss-preset-env": "6.7.0",
     "postcss-reporter": "7.0.2",
     "rucksack-css": "^1.0.2",
     "sass": "1.34.1",
-    "sass-loader": "12.0.0",
+    "sass-loader": "12.1.0",
     "stimulus": "^2.0.0",
     "style-loader": "2.0.0",
     "terser-webpack-plugin": "5.1.3",
     "url-loader": "4.1.1",
     "webpack": "5.38.1",
     "webpack-assets-manifest": "5.0.6",
-    "webpack-cli": "4.7.0",
+    "webpack-cli": "4.7.2",
     "workbox-webpack-plugin": "6.1.5",
     "workbox-window": "6.1.5"
   },
@@ -65,7 +65,7 @@
     "eslint": "7.28.0",
     "eslint-plugin-import": "2.23.4",
     "gray-matter": "4.0.3",
-    "html-to-text": "7.1.1",
+    "html-to-text": "8.0.0",
     "marked": "2.0.7",
     "minimist": "^1.2.5"
   }
