--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@babel/runtime-corejs3": "7.14.6",
     "@hotwired/turbo": "7.0.0-beta.7",
     "babel-loader": "8.2.2",
-    "core-js": "3.14.0",
+    "core-js": "3.15.0",
     "critical": "4.0.0",
     "css-loader": "5.2.6",
     "css-minimizer-webpack-plugin": "3.0.1",
@@ -35,26 +35,26 @@
     "lodash": "4.17.21",
     "lost": "8.3.1",
     "lunr": "^2.3.9",
-    "lunr-languages": "^1.4.0",
+    "lunr-languages": "1.7.0",
     "mark.js": "^8.11.1",
     "memoizee": "^0.4.15",
     "mini-css-extract-plugin": "1.6.0",
     "normalize.css": "8.0.1",
     "plyr": "3.6.8",
-    "postcss": "8.3.4",
+    "postcss": "8.3.5",
     "postcss-browser-reporter": "0.6.0",
     "postcss-import": "14.0.2",
     "postcss-loader": "6.1.0",
     "postcss-preset-env": "6.7.0",
     "postcss-reporter": "7.0.2",
     "rucksack-css": "^1.0.2",
-    "sass": "1.35.0",
+    "sass": "1.35.1",
     "sass-loader": "12.1.0",
     "stimulus": "^2.0.0",
     "style-loader": "2.0.0",
     "terser-webpack-plugin": "5.1.3",
     "url-loader": "4.1.1",
-    "webpack": "5.39.0",
+    "webpack": "5.39.1",
     "webpack-assets-manifest": "5.0.6",
     "webpack-cli": "4.7.2",
     "workbox-webpack-plugin": "6.1.5",
@@ -62,11 +62,11 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "7.28.0",
+    "eslint": "7.29.0",
     "eslint-plugin-import": "2.23.4",
     "gray-matter": "4.0.3",
     "html-to-text": "8.0.0",
-    "marked": "2.0.7",
+    "marked": "2.1.1",
     "minimist": "^1.2.5"
   }
 }
