--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "eslint": "eslint --ext .jsx,.js webpack/"
   },
   "dependencies": {
-    "@babel/core": "7.14.6",
+    "@babel/core": "7.14.8",
     "@babel/plugin-transform-runtime": "7.14.5",
-    "@babel/preset-env": "7.14.7",
-    "@babel/runtime": "7.14.6",
-    "@babel/runtime-corejs3": "7.14.7",
-    "@hotwired/turbo": "7.0.0-beta.8",
+    "@babel/preset-env": "7.14.8",
+    "@babel/runtime": "7.14.8",
+    "@babel/runtime-corejs3": "7.14.8",
+    "@hotwired/turbo": "7.0.0-rc.1",
     "babel-loader": "8.2.2",
     "core-js": "3.15.2",
-    "critical": "4.0.0",
+    "critical": "4.0.1",
     "css-loader": "6.2.0",
     "css-minimizer-webpack-plugin": "3.0.2",
     "del": "6.0.0",
@@ -41,20 +41,20 @@
     "mini-css-extract-plugin": "2.1.0",
     "normalize.css": "8.0.1",
     "plyr": "3.6.8",
-    "postcss": "8.3.5",
+    "postcss": "8.3.6",
     "postcss-browser-reporter": "0.6.0",
     "postcss-import": "14.0.2",
     "postcss-loader": "6.1.1",
     "postcss-preset-env": "6.7.0",
     "postcss-reporter": "7.0.2",
     "rucksack-css": "^1.0.2",
-    "sass": "1.35.2",
+    "sass": "1.36.0",
     "sass-loader": "12.1.0",
     "stimulus": "^2.0.0",
-    "style-loader": "3.1.0",
+    "style-loader": "3.2.1",
     "terser-webpack-plugin": "5.1.4",
     "url-loader": "4.1.1",
-    "webpack": "5.45.1",
+    "webpack": "5.46.0",
     "webpack-assets-manifest": "5.0.6",
     "webpack-cli": "4.7.2",
     "workbox-webpack-plugin": "6.1.5",
