--- a/package.json
+++ b/package.json
@@ -14,31 +14,30 @@
     "eslint": "eslint --ext .jsx,.js webpack/"
   },
   "dependencies": {
-    "@babel/core": "7.15.0",
+    "@babel/core": "7.15.5",
     "@babel/plugin-transform-runtime": "7.15.0",
-    "@babel/preset-env": "7.15.0",
-    "@babel/runtime": "7.15.3",
-    "@babel/runtime-corejs3": "7.15.3",
+    "@babel/preset-env": "7.15.4",
+    "@babel/runtime": "7.15.4",
+    "@babel/runtime-corejs3": "7.15.4",
     "@hotwired/turbo": "7.0.0-rc.3",
     "babel-loader": "8.2.2",
-    "core-js": "3.16.4",
+    "core-js": "3.17.2",
     "critical": "4.0.1",
     "css-loader": "6.2.0",
     "css-minimizer-webpack-plugin": "3.0.2",
     "del": "6.0.0",
     "delegated-events": "1.1.2",
     "file-loader": "6.2.0",
+    "flexsearch": "^0.7.21",
     "focus-visible": "^5.2.0",
     "gulp": "4.0.2",
     "gulp-gzip": "^1.4.2",
     "gulp-purgecss": "^4.0.3",
     "lodash": "4.17.21",
     "lost": "8.3.1",
-    "lunr": "^2.3.9",
-    "lunr-languages": "1.9.0",
     "mark.js": "^8.11.1",
     "memoizee": "^0.4.15",
-    "mini-css-extract-plugin": "2.2.0",
+    "mini-css-extract-plugin": "2.2.2",
     "normalize.css": "8.0.1",
     "plyr": "3.6.8",
     "postcss": "8.3.6",
@@ -48,13 +47,13 @@
     "postcss-preset-env": "6.7.0",
     "postcss-reporter": "7.0.2",
     "rucksack-css": "^1.0.2",
-    "sass": "1.38.2",
+    "sass": "1.39.0",
     "sass-loader": "12.1.0",
     "stimulus": "^2.0.0",
     "style-loader": "3.2.1",
-    "terser-webpack-plugin": "5.1.4",
+    "terser-webpack-plugin": "5.2.3",
     "url-loader": "4.1.1",
-    "webpack": "5.51.1",
+    "webpack": "5.52.0",
     "webpack-assets-manifest": "5.0.6",
     "webpack-cli": "4.8.0",
     "workbox-webpack-plugin": "6.2.4",
