--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
     "eslint": "eslint --ext .jsx,.js webpack/"
   },
   "dependencies": {
-    "@babel/core": "7.15.5",
-    "@babel/plugin-transform-runtime": "7.15.0",
-    "@babel/preset-env": "7.15.6",
+    "@babel/core": "7.15.8",
+    "@babel/plugin-transform-runtime": "7.15.8",
+    "@babel/preset-env": "7.15.8",
     "@babel/runtime": "7.15.4",
     "@babel/runtime-corejs3": "7.15.4",
-    "@hotwired/stimulus": "^3.0.0",
+    "@hotwired/stimulus": "^3.0.1",
     "@hotwired/stimulus-webpack-helpers": "^1.0.1",
     "@hotwired/turbo": "7.0.1",
     "babel-loader": "8.2.2",
-    "core-js": "3.18.1",
+    "core-js": "3.18.2",
     "critical": "4.0.1",
-    "css-loader": "6.3.0",
-    "css-minimizer-webpack-plugin": "3.1.0",
+    "css-loader": "6.4.0",
+    "css-minimizer-webpack-plugin": "3.1.1",
     "del": "6.0.0",
     "delegated-events": "1.1.2",
     "file-loader": "6.2.0",
@@ -38,10 +38,10 @@
     "lodash": "4.17.21",
     "lost": "8.3.1",
     "mark.js": "^8.11.1",
-    "mini-css-extract-plugin": "2.3.0",
+    "mini-css-extract-plugin": "2.4.2",
     "normalize.css": "8.0.1",
-    "plyr": "3.6.8",
-    "postcss": "8.3.8",
+    "plyr": "^3.6.8",
+    "postcss": "8.3.9",
     "postcss-browser-reporter": "0.6.0",
     "postcss-import": "14.0.2",
     "postcss-loader": "6.1.1",
@@ -53,9 +53,9 @@
     "style-loader": "3.3.0",
     "terser-webpack-plugin": "5.2.4",
     "url-loader": "4.1.1",
-    "webpack": "5.56.1",
+    "webpack": "5.58.1",
     "webpack-assets-manifest": "5.0.6",
-    "webpack-cli": "4.8.0",
+    "webpack-cli": "4.9.0",
     "workbox-webpack-plugin": "6.3.0",
     "workbox-window": "6.3.0"
   },
@@ -65,7 +65,7 @@
     "eslint-plugin-import": "2.24.2",
     "gray-matter": "4.0.3",
     "html-to-text": "8.0.0",
-    "marked": "3.0.4",
+    "marked": "3.0.7",
     "minimist": "^1.2.5"
   }
 }
