--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "scripts": {
     "assets:watch": "webpack --watch --color",
-    "assets:build": "gulp cleanup:assets && NODE_ENV=production webpack --bail",
+    "assets:build": "NODE_ENV=production webpack --bail",
     "optimize": "gulp optimize",
-    "eslint": "eslint --ext .jsx,.js webpack/"
+    "eslint": "eslint --ext .jsx,.js assets/"
   },
   "dependencies": {
     "@babel/core": "7.16.7",
@@ -27,7 +27,6 @@
     "critical": "4.0.1",
     "css-loader": "6.5.1",
     "css-minimizer-webpack-plugin": "3.3.1",
-    "del": "6.0.0",
     "delegated-events": "1.1.2",
     "file-loader": "6.2.0",
     "flexsearch": "^0.7.21",
@@ -35,8 +34,7 @@
     "gulp": "4.0.2",
     "gulp-gzip": "^1.4.2",
     "gulp-purgecss": "^4.1.3",
-    "lodash": "4.17.21",
-    "lost": "8.3.1",
+    "lodash.union": "^4.6.0",
     "mark.js": "^8.11.1",
     "mini-css-extract-plugin": "2.4.7",
     "normalize.css": "8.0.1",
@@ -48,8 +46,6 @@
     "postcss-preset-env": "7.2.3",
     "postcss-reporter": "7.0.5",
     "rucksack-css": "^1.0.2",
-    "sass": "1.48.0",
-    "sass-loader": "12.4.0",
     "style-loader": "3.3.1",
     "terser-webpack-plugin": "5.3.0",
     "url-loader": "4.1.1",
