--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,7 +54,7 @@ jobs:
         run: bundle exec middleman build
 
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.0
+        uses: JamesIves/github-pages-deploy-action@v4.2.3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: master # The branch the action should deploy to.
