--- a/package.json
+++ b/package.json
@@ -36,24 +36,28 @@
     "normalize.css": "8.0.1",
     "plyr": "^3.6.12",
     "postcss": "8.4.6",
-    "postcss-browser-reporter": "0.6.0",
     "postcss-import": "14.0.2",
     "postcss-loader": "6.2.1",
-    "postcss-preset-env": "7.3.1",
+    "postcss-preset-env": "7.3.2",
     "postcss-reporter": "7.0.5",
-    "rucksack-css": "^1.0.2",
     "style-loader": "3.3.1",
     "terser-webpack-plugin": "5.3.1",
     "url-loader": "4.1.1",
     "webpack": "5.68.0",
     "webpack-assets-manifest": "5.1.0",
     "webpack-cli": "4.9.2",
+    "workbox-core": "^6.4.2",
+    "workbox-expiration": "^6.4.2",
+    "workbox-precaching": "^6.4.2",
+    "workbox-routing": "^6.4.2",
+    "workbox-strategies": "^6.4.2",
     "workbox-webpack-plugin": "6.4.2",
     "workbox-window": "6.4.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.5",
-    "eslint": "8.8.0",
+    "eslint": "8.9.0",
+    "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "2.25.4",
     "gray-matter": "4.0.3",
     "html-to-text": "8.1.0",
