--- a/package.json
+++ b/package.json
@@ -36,8 +36,11 @@
     "gulp": "4.0.2",
     "html-to-text": "^8.2.1",
     "liquidjs": "^9.42.1",
+    "lodash": "^4.17.21",
     "mark.js": "^8.11.1",
     "marked": "^4.2.3",
+    "mdast-util-find-and-replace": "^2.2.1",
+    "mdast-util-to-markdown": "^1.3.0",
     "plyr": "^3.7.3",
     "postcss": "8.4.19",
     "postcss-import": "15.0.0",
@@ -46,6 +49,7 @@
     "postcss-reporter": "7.0.5",
     "reseter.css": "^2.0.0",
     "svelte": "3.53.1",
+    "unist-util-filter": "^4.0.0",
     "vite": "^3.2.4",
     "workbox-build": "^6.5.4",
     "workbox-core": "^6.5.4",
