--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mark.js": "^8.11.1",
     "marked": "^4.2.3",
     "mdast-util-find-and-replace": "^2.2.1",
+    "mdast-util-gfm": "^2.0.1",
     "mdast-util-to-markdown": "^1.3.0",
     "plyr": "^3.7.3",
     "postcss": "8.4.19",
