--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "postcss-load-config": "^4.0.1",
     "postcss-preset-env": "7.8.3",
     "postcss-reporter": "7.0.5",
+    "rehype-external-links": "^2.0.1",
     "reseter.css": "^2.0.0",
     "svelte": "3.53.1",
     "unist-util-filter": "^4.0.0",
