--- a/.eslintrc
+++ b/.eslintrc
@@ -28,7 +28,9 @@
         "astro/astro": true,
         "es2022": true
       },
-      "rules": {}
+      "rules": {
+        "astro/no-unused-css-selector": 2
+      }
     }
   ],
   "rules": {
