--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "@babel/runtime-corejs3": "7.20.1",
     "@hotwired/turbo": "7.2.4",
     "@rollup/plugin-yaml": "^4.0.1",
-    "astro": "^1.6.10",
-    "astro-compress": "^1.1.7",
+    "@vite-pwa/astro": "^0.0.1",
+    "astro": "^1.6.11",
+    "astro-compress": "^1.1.11",
     "astro-icon": "^0.8.0",
     "core-js": "^3.26.1",
     "dayjs": "^1.11.6",
@@ -54,6 +55,7 @@
     "unist-util-filter": "^4.0.0",
     "unist-util-remove": "^3.1.0",
     "vite": "^3.2.4",
+    "vite-plugin-pwa": "^0.13.3",
     "workbox-build": "^6.5.4",
     "workbox-core": "^6.5.4",
     "workbox-expiration": "^6.5.4",
