--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   },
   "dependencies": {
     "@astrojs/rss": "3.0.0",
-    "@astrojs/sitemap": "^3.0.1",
+    "@astrojs/sitemap": "^3.0.2",
     "@astrojs/svelte": "^4.0.3",
     "@hotwired/turbo": "7.3.0",
     "@rollup/plugin-yaml": "^4.1.2",
     "@vite-pwa/astro": "^0.1.3",
-    "astro": "^3.3.1",
+    "astro": "^3.3.4",
     "astro-icon": "0.8.1",
     "dayjs": "^1.11.10",
     "dom-serializer": "^2.0.0",
@@ -38,8 +38,8 @@
     "postcss-reporter": "7.0.5",
     "rehype-external-links": "^3.0.0",
     "reseter.css": "^2.0.0",
-    "svelte": "4.2.1",
-    "vite": "^4.4.11",
+    "svelte": "4.2.2",
+    "vite": "^4.5.0",
     "vite-plugin-pwa": "^0.16.5",
     "workbox-build": "^7.0.0",
     "workbox-core": "^7.0.0",
@@ -50,9 +50,9 @@
     "workbox-window": "7.0.0"
   },
   "devDependencies": {
-    "@yarnpkg/pnpify": "^4.0.0-rc.53",
+    "@yarnpkg/pnpify": "^4.0.0",
     "astro-eslint-parser": "^0.16.0",
-    "eslint": "8.51.0",
+    "eslint": "8.52.0",
     "eslint-plugin-astro": "^0.29.1",
     "eslint-plugin-svelte3": "^4.0.0",
     "gray-matter": "4.0.3",
@@ -62,5 +62,5 @@
     "prettier-plugin-svelte": "^3.0.3",
     "sharp": "^0.32.6"
   },
-  "packageManager": "yarn@3.3.0"
+  "packageManager": "yarn@4.0.0"
 }
