--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   "dependencies": {
     "@astrojs/rss": "3.0.0",
     "@astrojs/sitemap": "^3.0.3",
-    "@astrojs/svelte": "^4.0.3",
-    "@hotwired/turbo": "7.3.0",
+    "@astrojs/svelte": "^4.0.4",
+    "@hotwired/turbo": "8.0.0-beta.1",
     "@rollup/plugin-yaml": "^4.1.2",
     "@vite-pwa/astro": "^0.1.5",
-    "astro": "^3.5.4",
+    "astro": "^3.6.0",
     "astro-icon": "0.8.1",
     "dayjs": "^1.11.10",
     "dom-serializer": "^2.0.0",
@@ -33,14 +33,14 @@
     "plyr": "^3.7.8",
     "postcss": "8.4.31",
     "postcss-import": "15.1.0",
-    "postcss-load-config": "^4.0.1",
+    "postcss-load-config": "^4.0.2",
     "postcss-preset-env": "9.3.0",
     "postcss-reporter": "7.0.5",
     "rehype-external-links": "^3.0.0",
     "reseter.css": "^2.0.0",
-    "svelte": "4.2.3",
-    "vite": "^4.5.0",
-    "vite-plugin-pwa": "^0.16.7",
+    "svelte": "4.2.7",
+    "vite": "^5.0.2",
+    "vite-plugin-pwa": "^0.17.0",
     "workbox-build": "^7.0.0",
     "workbox-core": "^7.0.0",
     "workbox-expiration": "^7.0.0",
@@ -52,14 +52,14 @@
   "devDependencies": {
     "@yarnpkg/pnpify": "^4.0.1",
     "astro-eslint-parser": "^0.16.0",
-    "eslint": "8.53.0",
+    "eslint": "8.54.0",
     "eslint-plugin-astro": "^0.29.1",
     "eslint-plugin-svelte3": "^4.0.0",
     "gray-matter": "4.0.3",
     "minimist": "^1.2.8",
     "prettier": "^3.1.0",
     "prettier-plugin-astro": "^0.12.2",
-    "prettier-plugin-svelte": "^3.1.0",
+    "prettier-plugin-svelte": "^3.1.2",
     "sharp": "^0.32.6"
   },
   "packageManager": "yarn@4.0.1"
