--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   },
   "dependencies": {
     "@astrojs/rss": "4.0.1",
-    "@astrojs/sitemap": "^3.0.3",
-    "@astrojs/svelte": "^5.0.2",
+    "@astrojs/sitemap": "^3.0.4",
+    "@astrojs/svelte": "^5.0.3",
     "@hotwired/turbo": "8.0.0-beta.2",
+    "@iconify-json/mdi": "^1.1.64",
     "@rollup/plugin-yaml": "^4.1.2",
     "@vite-pwa/astro": "^0.2.0",
-    "astro": "^4.0.7",
-    "astro-icon": "0.8.2",
+    "astro": "^4.0.9",
+    "astro-icon": "1.0.2",
     "dayjs": "^1.11.10",
     "dom-serializer": "^2.0.0",
     "flexsearch": "^0.7.31",
@@ -29,10 +30,10 @@
     "liquidjs": "^10.10.0",
     "lodash": "^4.17.21",
     "mark.js": "^8.11.1",
-    "marked": "^11.1.0",
+    "marked": "^11.1.1",
     "plyr": "^3.7.8",
     "postcss": "8.4.32",
-    "postcss-import": "15.1.0",
+    "postcss-import": "16.0.0",
     "postcss-load-config": "^5.0.2",
     "postcss-preset-env": "9.3.0",
     "postcss-reporter": "7.0.5",
@@ -58,7 +59,7 @@
     "gray-matter": "4.0.3",
     "minimist": "^1.2.8",
     "prettier": "^3.1.1",
-    "prettier-plugin-astro": "^0.12.2",
+    "prettier-plugin-astro": "^0.12.3",
     "prettier-plugin-svelte": "^3.1.2",
     "sharp": "^0.32.6"
   },
