--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "format": "pnpify run prettier --plugin prettier-plugin-svelte --plugin prettier-plugin-astro --write src"
   },
   "dependencies": {
-    "@astrojs/rss": "4.0.2",
+    "@astrojs/rss": "4.0.3",
     "@astrojs/sitemap": "^3.0.5",
     "@astrojs/svelte": "^5.0.3",
-    "@hotwired/turbo": "8.0.0-beta.2",
+    "@hotwired/turbo": "8.0.0-beta.4",
     "@iconify-json/mdi": "^1.1.64",
     "@rollup/plugin-yaml": "^4.1.2",
     "@vite-pwa/astro": "^0.2.0",
-    "astro": "^4.2.1",
+    "astro": "^4.2.4",
     "astro-icon": "1.0.2",
     "dayjs": "^1.11.10",
     "dom-serializer": "^2.0.0",
@@ -62,7 +62,7 @@
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-svelte": "^3.1.2",
     "sharp": "^0.33.2",
-    "shikiji-core": "^0.10.0-beta.9"
+    "shikiji-core": "^0.10.0"
   },
   "packageManager": "yarn@4.0.2"
 }
