--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "format": "pnpify run prettier --plugin prettier-plugin-svelte --plugin prettier-plugin-astro --write src"
   },
   "dependencies": {
-    "@astrojs/rss": "4.0.3",
+    "@astrojs/rss": "4.0.4",
     "@astrojs/sitemap": "^3.0.5",
     "@astrojs/svelte": "^5.0.3",
-    "@hotwired/turbo": "8.0.0-beta.4",
+    "@hotwired/turbo": "8.0.0-rc.2",
     "@iconify-json/mdi": "^1.1.64",
     "@rollup/plugin-yaml": "^4.1.2",
     "@vite-pwa/astro": "^0.2.0",
-    "astro": "^4.2.4",
-    "astro-icon": "1.0.2",
+    "astro": "^4.3.2",
+    "astro-icon": "1.1.0",
     "dayjs": "^1.11.10",
     "dom-serializer": "^2.0.0",
     "flexsearch": "^0.7.43",
@@ -29,7 +29,7 @@
     "html-to-text": "^9.0.5",
     "lodash": "^4.17.21",
     "mark.js": "^8.11.1",
-    "marked": "^11.1.1",
+    "marked": "^11.2.0",
     "plyr": "^3.7.8",
     "postcss": "8.4.33",
     "postcss-import": "16.0.0",
@@ -40,7 +40,7 @@
     "reseter.css": "^2.0.0",
     "svelte": "4.2.9",
     "vite": "^5.0.12",
-    "vite-plugin-pwa": "^0.17.4",
+    "vite-plugin-pwa": "^0.17.5",
     "workbox-build": "^7.0.0",
     "workbox-core": "^7.0.0",
     "workbox-expiration": "^7.0.0",
@@ -51,9 +51,9 @@
   },
   "devDependencies": {
     "@yarnpkg/pnpify": "^4.0.1",
-    "astro-eslint-parser": "^0.16.2",
+    "astro-eslint-parser": "^0.16.3",
     "eslint": "8.56.0",
-    "eslint-plugin-astro": "^0.31.3",
+    "eslint-plugin-astro": "^0.31.4",
     "eslint-plugin-svelte3": "^4.0.0",
     "gray-matter": "4.0.3",
     "minimist": "^1.2.8",
@@ -61,7 +61,7 @@
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-svelte": "^3.1.2",
     "sharp": "^0.33.2",
-    "shikiji-core": "^0.10.0"
+    "shikiji-core": "^0.10.2"
   },
   "packageManager": "yarn@4.0.2"
 }
