--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "format": "pnpify run prettier --plugin prettier-plugin-svelte --plugin prettier-plugin-astro --write src"
   },
   "dependencies": {
-    "@astrojs/rss": "4.0.4",
+    "@astrojs/rss": "4.0.5",
     "@astrojs/sitemap": "^3.0.5",
     "@astrojs/svelte": "^5.0.3",
-    "@hotwired/turbo": "8.0.0-rc.2",
+    "@hotwired/turbo": "8.0.2",
     "@iconify-json/mdi": "^1.1.64",
     "@rollup/plugin-yaml": "^4.1.2",
     "@vite-pwa/astro": "^0.2.0",
-    "astro": "^4.3.2",
+    "astro": "^4.3.5",
     "astro-icon": "1.1.0",
     "dayjs": "^1.11.10",
     "dom-serializer": "^2.0.0",
@@ -29,17 +29,17 @@
     "html-to-text": "^9.0.5",
     "lodash": "^4.17.21",
     "mark.js": "^8.11.1",
-    "marked": "^11.2.0",
+    "marked": "^12.0.0",
     "plyr": "^3.7.8",
-    "postcss": "8.4.33",
+    "postcss": "8.4.35",
     "postcss-import": "16.0.0",
-    "postcss-load-config": "^5.0.2",
+    "postcss-load-config": "^5.0.3",
     "postcss-preset-env": "9.3.0",
     "postcss-reporter": "7.1.0",
     "rehype-external-links": "^3.0.0",
     "reseter.css": "^2.0.0",
-    "svelte": "4.2.9",
-    "vite": "^5.0.12",
+    "svelte": "4.2.10",
+    "vite": "^5.1.1",
     "vite-plugin-pwa": "^0.17.5",
     "workbox-build": "^7.0.0",
     "workbox-core": "^7.0.0",
@@ -57,7 +57,7 @@
     "eslint-plugin-svelte3": "^4.0.0",
     "gray-matter": "4.0.3",
     "minimist": "^1.2.8",
-    "prettier": "^3.2.4",
+    "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-svelte": "^3.1.2",
     "sharp": "^0.33.2",
