--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@astrojs/rss": "4.0.12",
     "@astrojs/sitemap": "^3.6.0",
-    "@astrojs/svelte": "^7.2.0",
+    "@astrojs/svelte": "7.1.1",
     "@hotwired/turbo": "8.0.18",
     "@iconify-json/mdi": "^1.2.3",
     "@rollup/plugin-yaml": "^4.1.2",
