--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rwpod",
   "description": "rwpod website",
   "author": "Alexey Vasiliev",
+  "type": "module",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -20,15 +21,14 @@
     "@iconify-json/mdi": "^1.2.3",
     "@rollup/plugin-yaml": "^4.1.2",
     "@vite-pwa/astro": "^1.2.0",
-    "astro": "^5.16.2",
+    "astro": "^5.16.3",
     "astro-icon": "1.1.5",
     "dayjs": "^1.11.19",
     "dom-serializer": "^2.0.0",
     "flexsearch": "^0.8.212",
-    "gulp": "5.0.1",
     "html-to-text": "^9.0.5",
     "lodash": "^4.17.21",
-    "marked": "^16.4.2",
+    "marked": "^17.0.1",
     "plyr": "^3.8.3",
     "postcss": "8.5.6",
     "postcss-import": "16.1.1",
@@ -38,7 +38,7 @@
     "rehype-external-links": "^3.0.0",
     "reseter.css": "^2.0.0",
     "svelte": "5.45.2",
-    "vite": "^7.2.4",
+    "vite": "^7.2.6",
     "vite-plugin-pwa": "^1.2.0",
     "workbox-build": "^7.4.0",
     "workbox-core": "^7.4.0",
@@ -49,14 +49,14 @@
     "workbox-window": "7.4.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@yarnpkg/pnpify": "^4.1.6",
     "astro-eslint-parser": "1.2.2",
-    "eslint": "8.57.1",
+    "eslint": "9.39.1",
     "eslint-plugin-astro": "^1.5.0",
-    "eslint-plugin-svelte": "^2.46.1",
-    "gray-matter": "4.0.3",
-    "minimist": "^1.2.8",
-    "prettier": "^3.7.2",
+    "eslint-plugin-svelte": "^3.13.0",
+    "globals": "^16.5.0",
+    "prettier": "^3.7.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-svelte": "^3.4.0",
     "sharp": "0.34.5",
